fixed profile alignment issue

--- a/client/src/pages/profile/profile.css
+++ b/client/src/pages/profile/profile.css
@@ -62,6 +62,9 @@
     .profile{
         flex-direction: row;
     }
+    .profileInfo{
+        margin-top: 90px;
+    }
 
     .profileRightBottom{
         flex-direction: row;
@@ -70,7 +73,7 @@
     .profileUserImg{
         width: 150px;
         height: 150px;
-        top: 150px;
+        top: 130px;
     }
 
     .profileInfoName{
